--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,3 @@
 services:
   nginx:
-    image: nginx
-    volumes:
-      - ./www:/usr/share/nginx/html
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+    build: .
